[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
version = "1.0"
authors = [
  { name="Ivan Dario Peñaloza Rojas", email="ivan1016017@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
[project]
name = "leetcode"
version = "1.0"
dependencies = [
"numpy",
"py",
"pytest",
"pytest-cov",
"Faker"
]